--- a/pl.javaschool.java9maven.dao/pom.xml
+++ b/pl.javaschool.java9maven.dao/pom.xml
@@ -3,21 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <modules>
-        <module>pl.javaschool.java9maven.dao</module>
-        <module>pl.javaschool.java9maven.service</module>
-    </modules>
-    <groupId>pl.javaschool</groupId>
-    <artifactId>java9maven</artifactId>
-    <packaging>pom</packaging>
+    <parent>
+        <groupId>pl.javaschool</groupId>
+        <artifactId>java9maven</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+    <artifactId>java9maven.dao</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-    <properties>
-        <maven.version>3.5.4</maven.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <jdk.version>10</jdk.version>
-    </properties>
+    <packaging>jar</packaging>
     <build>
         <plugins>
             <plugin>
@@ -25,10 +18,18 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <source>${jdk.version}</source>
-                    <target>${jdk.version}</target>
+                    <source>10</source>
+                    <target>10</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
