--- a/pl.javaschool.java9maven.service/pom.xml
+++ b/pl.javaschool.java9maven.service/pom.xml
@@ -35,6 +35,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.11.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>pl.javaschool</groupId>
             <artifactId>java9maven.dao</artifactId>
             <version>1.0-SNAPSHOT</version>
