--- a/pl.javaschool.java9maven.service/pom.xml
+++ b/pl.javaschool.java9maven.service/pom.xml
@@ -41,6 +41,18 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.21.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>2.21.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>pl.javaschool</groupId>
             <artifactId>java9maven.dao</artifactId>
             <version>1.0-SNAPSHOT</version>
